Update pom.xml
upd argline