@@ -152,6 +152,7 @@
 					<includes>
 						<include>**/**Rimac**.java</include>
 					</includes>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<systemProperties>
 						<webdriver.driver>${webdriver.driver}</webdriver.driver>
 					</systemProperties>
